infra-ingress/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: cert-pipelineiq-pipelineiq-tls
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: azure-application-gateway
  tls:
    - hosts:
        - argocd.pipelinesolutions.xyz
  rules:
    - host: argocd.pipelinesolutions.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
