infra-ingress/rollouts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-rollouts-ingress
  namespace: argo-rollouts
  annotations:
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: cert-pipelineiq-pipelineiq-tls
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: azure-application-gateway

  tls:
    - hosts:
        - rollouts.pipelinesolutions.xyz

  rules:
    - host: rollouts.pipelinesolutions.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-rollouts-dashboard
                port:
                  number: 3100
